fixed wrong paddings

--- a/css/classes.css
+++ b/css/classes.css
@@ -62,6 +62,11 @@ button {
         height: auto;
     }
 
+    section > div > div {
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+    }
+
     button {
         width: 120px;
         height: 25px;
